# karney

./: .coverage  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: CI-CD.yml  CI-tests.yml  publish.yml  python-package.yml  testpublish.yml
conda-recipe/: meta.yaml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
src/karney/: __init__.py  _common.py  geodesic.py  license.py  util.py
tests/: test_geodesic.py  test_util.py
