[tool.poetry]
name = "karney"
version = "0.1.1"
description = "Solves the direct and inverse geodesic problem."
authors = ["Per A. Brodtkorb"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.22.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
pytest-cov = ">=4.1.0"
jupyter = ">=1.0.0"
myst-nb = {version = ">=1.0.0", python = "^3.9"}
sphinx-autoapi = ">=3.0.0"
sphinx-rtd-theme = ">=2.0.0"
hypothesis = ">=6.98.3"
python-semantic-release = ">=9.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
