[project]
name = "karney"
version = "1.0.10"
description = "Solves the direct and inverse geodesic problem."
authors = [
    {name = "Per A. Brodtkorb", email = "per.andreas.brodtkorb@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
# See https://numpy.org/neps/nep-0029-deprecation_policy.html:
dependencies = [
    "numpy<2.0; python_version < '3.11'",
    "numpy>=1.25; python_version >= '3.11'",
    # "numpy>=2.0; python_version >= '3.12'",
    #"numpy>=1.19; python_version >= '3.8' and python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/pbrod/karney"
Documentation = "https://karney.readthedocs.io/en/latest/"
Repository = "https://github.com/pbrod/karney"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "myst-nb>=1.0.0; python_version >= '3.9'",
    "sphinx-autoapi>=3.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "hypothesis>=6.98.3",
    "python-semantic-release>=9.0.3",
    "ruff>=0.0.47",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
package-dir = "src"

[tool.semantic_release]
commit_parser = "angular"
logging_use_named_masks = true
allow_zero_version = true
tag_format = "v{version}"
version_variables = ["pyproject.toml:version", "src/karney/__init__.py:__version__"]

commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"

branch= "main" # branch to make releases of
build_command = "pdm build"

[tool.semantic_release.changelog]

changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [".*\\n\\nAutomatically generated by python-semantic-release", "chore: pre-commit autoupdate\n\nAutomatically generated by pre-commit.ci"]

[tool.semantic_release.commit_parser_options]
allowed_types = [
    "build", "chore", "ci", "docs", "feat", "fix",
    "perf", "style", "refactor", "test",
]
minor_types = ["feat"]
patch_types = ["fix", "perf"]


# chore: Changes to the build process or auxiliary tools and libraries such as documentation generation
# docs: Documentation only changes
# feat: A new feature
# fix: A bug fix
# perf: A code change that improves performance
# refactor: A code change that neither fixes a bug nor adds a feature
# style: Changes that do not affect the meaning of the code (white-space, formatting, missing semi-colons, etc)
# test: Adding missing or correcting existing tests




[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "B", "Q"]  #[, "I"]

[tool.ruff.format]
#docstring-code-format = true
docstring-code-line-length = 100

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL",  "ELLIPSIS"]